--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,14 @@
 	margin: 0;
 	padding: 0;
 }
+
+.app {
+	width: 100vw;
+	height: 100vh;
+	background-color: #212121;
+	background: linear-gradient(
+		180deg,
+		rgba(59, 59, 59, 1) 0%,
+		rgba(0, 0, 0, 1) 100%
+	);
+}
